correction WCAG AA pour les problemes de contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,9 +90,6 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -354,3 +351,6 @@ input[type="submit"] {
 	}
 }
 
+.cursor-pointer {
+	cursor: pointer;
+}
